# GreyModel

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts_autofit_smoke/: run_registry.jsonl
artifacts_autofit_smoke/autofit-lite/: run_status.json
artifacts_autofit_smoke/autofit-lite/autofit_datasets/tests-3e24d333/: dataset_index.json  ontology.json  splits.json
configs/: base.json  lite.json  station_example.json
docs/: architecture.md  data_format.md  framework.md  recovery.md  ui.md
docs/graphs/base/: model_graph.json  model_graph.mmd
docs/graphs/lite/: model_graph.json  model_graph.mmd
greymodel/: __init__.py  __main__.py
scripts/: pretrain_8xa100_defect_spectrum.ps1  pretrain_8xa100_defect_spectrum.sh  pretrain_8xa100_defect_spectrum.slurm
src/greymodel/: __init__.py  api.py  autofit.py  backends.py  calibration.py  cli.py  data.py  engine.py  evaluation.py  explainability.py  graphing.py  hf_backends.py  losses.py  model_profiles.py  prediction.py  preprocessing.py  pretrain_registry.py  profiles.py  recovery.py  registry.py  runners.py  settings.py  synthetic.py  tiling.py  tracking.py  training.py  types.py  ui.py  ui_app.py  ui_models.py  ui_workspace.py  utils.py
src/greymodel/models/: __init__.py  builder.py  conditioning.py  config.py  fast_native.py  grayinspect.py
tests/: conftest.py  test_autofit.py  test_calibration_synthetic_losses.py  test_dataset_framework.py  test_engine_settings.py  test_framework_xai_cli.py  test_huggingface_import.py  test_model_profiles.py  test_models.py  test_preprocessing.py  test_public_api.py  test_recovery_predict_ui.py  test_tiling.py  test_training_framework.py
(+3 files in other folders)
